tests/parser/tests/cases/should_fail/invalid_float_exponent/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:12
1 |   k := 12e23.0;
  |              ^ here
  = note: Expected field name access or an infix function call.
